[package]
name = "torkoal"
version = "0.1.0"
authors = ["7k, agent burks"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
songbird = "0.3.2"


[dependencies.serenity]
version = "0.11.5"
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache"
]


[dependencies.tokio]
version = "1.28.2"
features = ["full"]
